// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The form components as a form should render properly 1`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form>
    <div
      class="form-row_container"
    >
      <label
        for="id-1-1"
      >
        My Label
      </label>
      <input
        id="id-1-1"
        type="text"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-2-1"
      >
        My Checkbox
      </label>
      <input
        checked=""
        id="id-2-1"
        type="checkbox"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-3-1"
      >
        My Date
      </label>
      <input
        id="id-3-1"
        type="date"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-4-1"
      >
        My Range
      </label>
      <input
        id="id-4-1"
        max="100"
        min="0"
        step="1"
        type="range"
        value="50"
      />
      <span>
        50
      </span>
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-5-1"
      >
        Telephone
      </label>
      <input
        id="id-5-1"
        type="tel"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-6-1"
      >
        My DateTime
      </label>
      <input
        id="id-6-1"
        type="datetime"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-7-1"
      >
        My Month
      </label>
      <input
        id="id-7-1"
        type="month"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-8-1"
      >
        My Week
      </label>
      <input
        id="id-8-1"
        type="week"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-9-1"
      >
        My DateTime
      </label>
      <input
        id="id-9-1"
        type="datetime-local"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-10-1"
      >
        My Time
      </label>
      <input
        id="id-10-1"
        type="time"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-11-1"
      >
        My Drop Down
      </label>
      <select
        data-testid="dd1"
        id="id-11-1"
      >
        <optgroup
          label="First Group"
        >
          <option
            value="1"
          >
            First
          </option>
          <option
            value="2"
          >
            Second
          </option>
          <option
            value="3"
          >
            Third
          </option>
        </optgroup>
        <optgroup
          label="Second Group"
        >
          <option
            value="11"
          >
            Second First
          </option>
          <option
            value="12"
          >
            Second Second
          </option>
          <option
            value="13"
          >
            Second Third
          </option>
        </optgroup>
        <optgroup
          label="Third Group"
        >
          <option
            value="21"
          >
            Third First
          </option>
          <option
            value="22"
          >
            Third Second
          </option>
          <option
            value="23"
          >
            Third Third
          </option>
        </optgroup>
      </select>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
        
      </li>
      <li
        data-testid="range"
      >
        Range: 
        
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`The form components as a form should render properly 2`] = `
<div>
  <h1>
    React Form Elements
  </h1>
  <form>
    <div
      class="form-row_container"
    >
      <label
        for="id-1-1"
      >
        My Label
      </label>
      <input
        id="id-1-1"
        type="text"
        value="Changed Value"
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-2-1"
      >
        My Checkbox
      </label>
      <input
        checked=""
        id="id-2-1"
        type="checkbox"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-3-1"
      >
        My Date
      </label>
      <input
        id="id-3-1"
        type="date"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-4-1"
      >
        My Range
      </label>
      <input
        id="id-4-1"
        max="100"
        min="0"
        step="1"
        type="range"
        value="50"
      />
      <span>
        50
      </span>
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-5-1"
      >
        Telephone
      </label>
      <input
        id="id-5-1"
        type="tel"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-6-1"
      >
        My DateTime
      </label>
      <input
        id="id-6-1"
        type="datetime"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-7-1"
      >
        My Month
      </label>
      <input
        id="id-7-1"
        type="month"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-8-1"
      >
        My Week
      </label>
      <input
        id="id-8-1"
        type="week"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-9-1"
      >
        My DateTime
      </label>
      <input
        id="id-9-1"
        type="datetime-local"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-10-1"
      >
        My Time
      </label>
      <input
        id="id-10-1"
        type="time"
        value=""
      />
    </div>
    <div
      class="form-row_container"
    >
      <label
        for="id-11-1"
      >
        My Drop Down
      </label>
      <select
        data-testid="dd1"
        id="id-11-1"
      >
        <optgroup
          label="First Group"
        >
          <option
            value="1"
          >
            First
          </option>
          <option
            value="2"
          >
            Second
          </option>
          <option
            value="3"
          >
            Third
          </option>
        </optgroup>
        <optgroup
          label="Second Group"
        >
          <option
            value="11"
          >
            Second First
          </option>
          <option
            value="12"
          >
            Second Second
          </option>
          <option
            value="13"
          >
            Second Third
          </option>
        </optgroup>
        <optgroup
          label="Third Group"
        >
          <option
            value="21"
          >
            Third First
          </option>
          <option
            value="22"
          >
            Third Second
          </option>
          <option
            value="23"
          >
            Third Third
          </option>
        </optgroup>
      </select>
    </div>
    <button>
      Check
    </button>
  </form>
  <div
    data-testid="ref-out"
  >
    <ul>
      <li
        data-testid="textbox"
      >
        TextBox: 
        Changed Value
      </li>
      <li
        data-testid="checkbox"
      >
        Checkbox: 
      </li>
      <li
        data-testid="range"
      >
        Range: 
        50
      </li>
      <li
        data-testid="date"
      >
        Date: 
        
      </li>
      <li
        data-testid="telephone"
      >
        Telephone: 
      </li>
    </ul>
  </div>
</div>
`;
